new payment driver integration (#2710)
* new payment driver: update deps & remove zksync
* new payment driver: initial integration
  * temporary fix of payment example -- will not work with new driver. TODO: make the new driver work in the example.
  * cleanup transfer, remove _transfer, remove gasless.
  * general way to compute chain_id based on config-payments.toml.
  * remove lots of code made obsolete by the new driver.
  * introduce signer for signing transactions for erc20_payment_lib
* temporarily disable payment fund.

---------

Co-authored-by: scx1332 <sieciech.czajka@golem.network>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,11 @@ license = "GPL-3.0"
 edition = "2018"
 
 [features]
-default = ['erc20-driver', 'zksync-driver', 'gftp/bin']
+default = ['erc20-driver', 'erc20next-driver', 'gftp/bin']
 static-openssl = ["openssl/vendored", "openssl-probe"]
 dummy-driver = ['ya-dummy-driver']
 erc20-driver = ['ya-erc20-driver']
-zksync-driver = ['ya-zksync-driver']
+erc20next-driver = ['ya-erc20next-driver']
 tos = []
 framework-test = []
 # Temporary to make goth integration tests work
@@ -23,12 +23,20 @@ packet-trace-enable = [
     "ya-vpn/packet-trace-enable",
     "ya-file-logging/packet-trace-enable",
     "ya-net/packet-trace-enable",
-    "ya-service-bus/packet-trace-enable"
+    "ya-service-bus/packet-trace-enable",
 ]
 
 [[bin]]
 name = "yagna"
 path = "core/serv/src/main.rs"
+
+[workspace.dependencies]
+# this entry is needed to make sqlx version >=0.5.9 work with diesel 1.4.*
+# diesel 1.4.* supports up to 0.23.0, but sqlx 0.5.9 requires 0.22.0
+# sqlx 0.5.10 need 0.23.2, so 0.5.9 is last version possible
+libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
+erc20_payment_lib = { path = "../../payments/erc20_payment_lib/crates/erc20_payment_lib" }
+#erc20_payment_lib = { version = "=0.1.9" }
 
 [dependencies]
 ya-activity = "0.4"
@@ -38,7 +46,7 @@ ya-dummy-driver = { version = "0.3", optional = true }
 ya-file-logging = "0.1"
 ya-gsb-api = "0.1"
 ya-erc20-driver = { version = "0.4", optional = true }
-ya-zksync-driver = { version = "0.3", optional = true }
+ya-erc20next-driver = { version = "0.4", optional = true }
 ya-identity = "0.3"
 ya-market = "0.4"
 ya-metrics = "0.2"
@@ -86,6 +94,8 @@ tokio = { version = "1", features = ["net"] }
 tokio-util = { version = "0.7", features = ["codec"] }
 tokio-stream = { version = "0.1.8", features = ["io-util"] }
 url = "2.1.1"
+libsqlite3-sys = { workspace = true }
+
 
 [dev-dependencies]
 ya-test-framework = "0.1"
@@ -167,8 +177,6 @@ assets = [
         "644",
     ],
 ]
-[workspace.dependencies]
-libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
 
 [workspace]
 members = [
@@ -185,7 +193,7 @@ members = [
     "core/payment-driver/base",
     "core/payment-driver/dummy",
     "core/payment-driver/erc20",
-    "core/payment-driver/zksync",
+    "core/payment-driver/erc20next",
     "core/persistence",
     "core/serv-api",
     "core/serv-api/derive",
@@ -216,7 +224,7 @@ members = [
     "utils/fd-metrics",
     "core/metrics",
     "test-utils/test-framework",
-    "test-utils/test-framework/framework-macro"
+    "test-utils/test-framework/framework-macro",
 ]
 
 [patch.crates-io]
@@ -231,7 +239,7 @@ ya-payment = { path = "core/payment" }
 ya-payment-driver = { path = "core/payment-driver/base" }
 ya-dummy-driver = { path = "core/payment-driver/dummy" }
 ya-erc20-driver = { path = "core/payment-driver/erc20" }
-ya-zksync-driver = { path = "core/payment-driver/zksync" }
+ya-erc20next-driver = { path = "core/payment-driver/erc20next" }
 ya-version = { path = "core/version" }
 ya-vpn = { path = "core/vpn" }
 ya-gsb-api = { path = "core/gsb-api" }
@@ -245,10 +253,10 @@ ya-service-api-interfaces = { path = "core/serv-api/interfaces" }
 ya-service-api-web = { path = "core/serv-api/web" }
 
 ## SERVICE BUS
-ya-service-bus = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "190f0d772f7ed0830d54a2cef77d7a177f276c68"}
-ya-sb-proto = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "190f0d772f7ed0830d54a2cef77d7a177f276c68"}
-ya-sb-router = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "190f0d772f7ed0830d54a2cef77d7a177f276c68"}
-ya-sb-util = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "190f0d772f7ed0830d54a2cef77d7a177f276c68"}
+ya-service-bus = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "190f0d772f7ed0830d54a2cef77d7a177f276c68" }
+ya-sb-proto = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "190f0d772f7ed0830d54a2cef77d7a177f276c68" }
+ya-sb-router = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "190f0d772f7ed0830d54a2cef77d7a177f276c68" }
+ya-sb-util = { git = "https://github.com/golemfactory/ya-service-bus.git", rev = "190f0d772f7ed0830d54a2cef77d7a177f276c68" }
 
 #ya-service-bus = { path = "../ya-service-bus" }
 #ya-sb-proto = { path = "../ya-service-bus/crates/proto" }
@@ -290,9 +298,8 @@ ya-framework-macro = { path = "test-utils/test-framework/framework-macro" }
 
 ethereum-tx-sign = { git = "https://github.com/mfranciszkiewicz/ethereum-tx-sign.git", rev = "1164c74187a9e2947faeaea7dde104c3cdec4195" }
 graphene-sgx = { git = " https://github.com/golemfactory/graphene-rust.git", rev = "dbd993ebad7f9190410ea390a589348479af6407" }
-web3 = { git = "https://github.com/golemfactory/rust-web3", branch = "update_ethabi" }
 
-diesel = { git = "https://github.com/golemfactory/yagna-diesel-patch.git", rev = "a512c66d520a9066dd9a4d1416f9109019b39563"}
+diesel = { git = "https://github.com/golemfactory/yagna-diesel-patch.git", rev = "a512c66d520a9066dd9a4d1416f9109019b39563" }
 
 # Speed up builds on macOS (will be default in next rust version probably)
 # https://jakedeichert.com/blog/reducing-rust-incremental-compilation-times-on-macos-by-70-percent/
