--- a/core/payment-driver/erc20/Cargo.toml
+++ b/core/payment-driver/erc20/Cargo.toml
@@ -14,8 +14,8 @@ awc = { version = "3", features = ["openssl"] }
 bigdecimal = { version = "0.2" }
 chrono = { version = "0.4", features = ["serde"] }
 derive_more = "0.99"
-ethabi = "14.1"
-ethereum-types = "0.11"
+ethabi = "18.0"
+ethereum-types = "0.14.1"
 ethereum-tx-sign = "3.1"
 futures = "0.3"
 hex = "0.4"
@@ -32,7 +32,11 @@ thiserror = "1.0"
 tiny-keccak = { version = "2.0", features = ["keccak"] }
 tokio = { version = "1", features = ["full"] }
 uuid = { version = "0.8", features = ["v4"] }
-web3 = { version = "0.16", default-features = false, features = [ "http-tls", "signing", "ws-tls-tokio" ] }
+web3 = { version = "0.19.0", default-features = false, features = [
+    "http-tls",
+    "signing",
+    "ws-tls-tokio",
+] }
 
 ## yagna dependencies
 ya-payment-driver = "0.3"
@@ -40,6 +44,7 @@ ya-client-model = "0.5"
 ya-service-api-interfaces = "0.2"
 ya-utils-futures = "0.2"
 ya-utils-networking = "0.2"
+erc20_payment_lib = { workspace = true }
 
 [dev-dependencies]
 actix-rt = "2.7"
