workflows: enable tests for payments-dev branch

--- a/.github/workflows/binaries-aarch64.yml
+++ b/.github/workflows/binaries-aarch64.yml
@@ -4,10 +4,12 @@ on:
   push:
     branches:
       - master
+      - payments-dev
       - release/*
   pull_request:
     branches:
       - master
+      - payments-dev
       - release/*
 
 jobs:
