--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -8,10 +8,7 @@ version = "0.1.1"
 description = "Integration tests for yagna"
 authors = ["GolemFactory <contact@golem.network>"]
 license = "LGPL-3.0-or-later"
-classifiers = [
-    "Development Status :: 3 - Alpha",
-    "Framework :: AsyncIO",
-]
+classifiers = ["Development Status :: 3 - Alpha", "Framework :: AsyncIO"]
 repository = "https://github.com/golemfactory/yagna"
 documentation = "https://handbook.golem.network"
 readme = "README.md"
@@ -22,9 +19,9 @@ pytest = "^6.2"
 pytest-asyncio = "^0.20.2"
 pytest-rerunfailures = "^10.3"
 pytest-split = "^0.8.1"
-goth = "^0.15.0"
+# goth = "^0.15.0"
 # to use development goth version uncomment below
-# goth =  { git = "https://github.com/golemfactory/goth.git", rev = "d2951a62e2a7cf0712f7f4a66c4a080777841611" }
+goth = { git = "https://github.com/golemfactory/goth.git", rev = "664c85965cee5fed14c5b42e81ff2ca343184e08" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
