--- a/.github/workflows/binaries-aarch64.yml
+++ b/.github/workflows/binaries-aarch64.yml
@@ -10,6 +10,9 @@ on:
       - master
       - release/*
 
+env:
+  rust_stable: 1.71.1
+
 jobs:
   build:
     name: Build binaries (aarch64)
@@ -20,10 +23,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup toolchain
+      - name: Install Rust ${{ env.rust_stable }}
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: ${{ env.rust_stable }}
           target: aarch64-unknown-linux-musl
           override: true
 
