--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,7 +60,7 @@ ya-utils-networking = "0.2"
 ya-fd-metrics = { path = "utils/fd-metrics" }
 ya-version = "0.2"
 ya-vpn = "0.2"
-ya-client = "0.7.1"
+ya-client = "0.7"
 ya-client-model = "0.5"
 
 gftp = { version = "0.3.1", optional = true }      # just to enable gftp build for cargo-deb
@@ -256,8 +256,8 @@ ya-sb-util = { git = "https://github.com/golemfactory/ya-service-bus.git", rev =
 #ya-sb-util = { path = "../ya-service-bus/crates/util" }
 
 ## CLIENT
-#ya-client = { git = "https://github.com/golemfactory/ya-client.git", rev = "2a6350f62cf8d926721225a3451822731456e3fe" }
-#ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "2a6350f62cf8d926721225a3451822731456e3fe" }
+ya-client = { git = "https://github.com/golemfactory/ya-client.git", rev = "20590d867dff7bb0662b5fc2abc6b6417cc47fe5" }
+ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "20590d867dff7bb0662b5fc2abc6b6417cc47fe5" }
 
 ## RELAY and networking stack
 ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "c92a75b0cf062fcc9dbb3ea2a034d913e5fad8e5" }
