--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@ workdir/*
 core/market/decentralized/tests/test-workdir/*
 releases/
 
+# erc20next
+db.sqlite
+db.sqlite-shm
+db.sqlite-wal
+
 # IDEs
 .idea
 .vs
