--- a/.github/workflows/unit-test-sgx.yml
+++ b/.github/workflows/unit-test-sgx.yml
@@ -6,6 +6,7 @@ on:
       - master
       - payments-dev
       - release/*
+      - kek/enable-tests2
   pull_request:
     branches:
       - master
