--- a/.github/workflows/binaries-x86-64.yml
+++ b/.github/workflows/binaries-x86-64.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Build binaries
         run: |
-          cargo build --all --features static-openssl --target x86_64-unknown-linux-musl
+          cargo build --features static-openssl --target x86_64-unknown-linux-musl -p yagna -p ya-exe-unit -p gftp -p golemsp -p ya-provider
 
       - name: Copy binaries
         shell: bash
