--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -32,9 +32,6 @@ jobs:
     name: Integration Tests (hybrid-net) group
     runs-on: [goth, ubuntu-18.04]
     needs: test_check
-    strategy:
-      matrix:
-        group: [1, 2]
     defaults:
       run:
         working-directory: "./goth_tests"
@@ -93,7 +90,7 @@ jobs:
         env:
           GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          poetry run poe goth-tests --splits 2 --group ${{ matrix.group }} --config-override docker-compose.build-environment.binary-path=/tmp/yagna-build
+          poetry run poe goth-tests --splits 10 --group 1 --config-override docker-compose.build-environment.binary-path=/tmp/yagna-build
 
       - name: Upload test logs
         uses: actions/upload-artifact@v2
