--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -22,9 +22,9 @@ pytest = "^6.2"
 pytest-asyncio = "^0.20.2"
 pytest-rerunfailures = "^10.3"
 pytest-split = "^0.8.1"
-goth = "^0.15.0"
+#goth = "^0.15.0"
 # to use development goth version uncomment below
-# goth =  { git = "https://github.com/golemfactory/goth.git", rev = "d2951a62e2a7cf0712f7f4a66c4a080777841611" }
+goth =  { git = "https://github.com/golemfactory/goth.git", rev = "70f3ae8122cb6f93f03c973f68c5acfcfef443ee" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
