Enable tests for gpu-hardening-master branch

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - master
       - release/*
+      - gpu-hardening-master
   pull_request:
     branches:
       - master
       - release/*
+      - gpu-hardening-master
 
 jobs:
   test_check:
