--- a/.github/workflows/binaries-x86-64.yml
+++ b/.github/workflows/binaries-x86-64.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - master
       - release/*
+      - gpu-hardening-master
   pull_request:
     branches:
       - master
       - release/*
+      - gpu-hardening-master
 
 env:
   rust_stable: 1.71.1
