--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -11,8 +11,17 @@ name = "Golem Factory"
 email = "contact@golem.network"
 
 [profile.release]
-lto="fat"
-opt-level=3
-codegen-units=1
+lto = "fat"
+opt-level = 3
+codegen-units = 1
 
-
+[profile.release-fast]
+inherits = "release"
+opt-level = 1
+debug = false
+debug-assertions = true
+overflow-checks = true
+lto = false
+panic = 'unwind'
+incremental = false
+# codegen-units = 256
