Fix derive more in different versions which can cause unnecessary rebuilds

--- a/agent/provider/Cargo.toml
+++ b/agent/provider/Cargo.toml
@@ -35,7 +35,7 @@ backoff = "0.2.1"
 bigdecimal = "0.2"
 bytesize = "1.0.1"
 chrono = { version = "0.4", features = ["serde"] }
-derive_more = "0.99.5"
+derive_more = { workspace = true }
 dialoguer = "0.5.0"
 directories = "2.0.2"
 dotenv = "0.15.0"
