--- a/core/model/Cargo.toml
+++ b/core/model/Cargo.toml
@@ -41,7 +41,7 @@ ya-service-bus = "0.6.1"
 bigdecimal = { version = "0.2", features = ["serde"], optional = true }
 bitflags = { version = "1.2", optional = true }
 chrono = { version = "0.4", features = ["serde"] }
-derive_more = "0.99.11"
+derive_more = { workspace = true }
 graphene-sgx = { version = "0.3.3", optional = true }
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
