--- a/core/payment-driver/erc20next/Cargo.toml
+++ b/core/payment-driver/erc20next/Cargo.toml
@@ -14,7 +14,7 @@ awc = { version = "3", features = ["openssl"] }
 bigdecimal = { version = "0.2" }
 ethsign = "0.8"
 chrono = { version = "0.4", features = ["serde"] }
-derive_more = "0.99"
+derive_more = { workspace = true }
 ethabi = "18.0"
 ethereum-types = "0.14.1"
 ethereum-tx-sign = "3.1"
