--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ erc20_payment_lib = { git = "https://github.com/golemfactory/erc20_payment_lib",
 rand = "0.8.5"
 url = "2.3.1"
 trust-dns-resolver = "0.22"
+derive_more = "0.99.11"
 
 [dependencies]
 ya-activity = "0.4"
