--- a/core/market/Cargo.toml
+++ b/core/market/Cargo.toml
@@ -33,7 +33,7 @@ anyhow = "1.0"
 async-trait = { version = "0.1.33" }
 backtrace = "0.3.50"
 chrono = { version = "0.4", features = ["serde"] }
-derive_more = "0.99.5"
+derive_more = { workspace = true }
 diesel = { version = "1.4", features = ["chrono", "sqlite", "r2d2"] }
 diesel_migrations = "1.4"
 digest = "0.8.1"
