--- a/exe-unit/Cargo.toml
+++ b/exe-unit/Cargo.toml
@@ -61,7 +61,7 @@ async-trait = "0.1.24"
 bytes = "1"
 chrono = "0.4"
 derivative = "2.1"
-derive_more = "0.99"
+derive_more = { workspace = true }
 dotenv = "0.15.0"
 flexi_logger = { version = "0.22", features = ["colors"] }
 futures = "0.3"
