--- a/utils/process/Cargo.toml
+++ b/utils/process/Cargo.toml
@@ -16,7 +16,7 @@ lock = ["fs2"]
 [dependencies]
 actix = { version = "0.13", default-features = false }
 anyhow = "1.0"
-derive_more = "0.99.5"
+derive_more = { workspace = true }
 futures = "0.3"
 futures-util = "0.3.4"
 libc = "0.2"
