Fix derive more in different versions which can cause unnecessary rebuilds
# Conflicts:
#	Cargo.toml
#	core/payment-driver/erc20/Cargo.toml
#	core/payment-driver/zksync/Cargo.toml

--- a/core/payment-driver/zksync/Cargo.toml
+++ b/core/payment-driver/zksync/Cargo.toml
@@ -13,7 +13,10 @@ anyhow = "1.0"
 awc = { version = "3.0", features = ["openssl"] }
 bigdecimal = { version = "0.2" }
 chrono = { version = "0.4", features = ["serde"] }
-ethereum-types = "0.10"
+derive_more = { workspace = true }
+ethabi = "18.0"
+ethereum-types = "0.14.1"
+ethereum-tx-sign = "3.1"
 futures = "0.3"
 hex = "0.4"
 lazy_static = "1.4"
