--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -26,9 +26,9 @@ pytest = "^6.2"
 pytest-asyncio = "^0.20.2"
 pytest-rerunfailures = "^10.3"
 pytest-split = "^0.8.1"
-goth = "0.15.1"
+# goth = "0.15.1"
 # to use development goth version uncomment below
-# goth =  { git = "https://github.com/golemfactory/goth.git", rev = "f399163b9f3882cca4ca4152c06aed57b916ca67" }
+goth =  { git = "https://github.com/golemfactory/goth.git", rev = "d8535bad0c606daaa61f97966d4121a44157ebc6" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
