--- a/Cargo.toml
+++ b/Cargo.toml
@@ -264,8 +264,8 @@ ya-sb-util = { git = "https://github.com/golemfactory/ya-service-bus.git", rev =
 #ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "2a6350f62cf8d926721225a3451822731456e3fe" }
 
 ## RELAY and networking stack
-ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "7a324a10178329db6b9e3339b2f948756d4449ba" }
-ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "7a324a10178329db6b9e3339b2f948756d4449ba" }
+ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git" }
+ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git" }
 
 #ya-relay-stack = { path = "../ya-relay/crates/stack" }
 #ya-relay-client = { path = "../ya-relay/client" }
