--- a/core/vpn/Cargo.toml
+++ b/core/vpn/Cargo.toml
@@ -31,7 +31,7 @@ mime = "0.3.16"
 rand = "0.7.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-smoltcp = { package = "ya-smoltcp", version = "0.1" }
+smoltcp = "0.10.0"
 thiserror = "1.0"
 tokio = { version = "1", features = ["time"] }
 tokio-stream = "0.1.6"
