--- a/goth_tests/assets/docker/docker-compose.yml
+++ b/goth_tests/assets/docker/docker-compose.yml
@@ -24,11 +24,34 @@ services:
             # we map them to ports 16001-16100 on the host.
             - "16001-16100:6001-6100"
 
-    ethereum:
-        image: docker.pkg.github.com/golemfactory/gnt2/gnt2-docker-yagna:96a6fea67c45
+    ethereum-rinkeby:
+        image: docker.pkg.github.com/golemfactory/gnt2/gnt2-docker-yagna:a93c126e8255
         ports:
             - "8545:8545"
-    
+        environment:
+            - GANACHE_CHAIN_ID=4
+
+    ethereum-mainnet:
+        image: docker.pkg.github.com/golemfactory/gnt2/gnt2-docker-yagna:a93c126e8255
+        ports:
+            - "8546:8545"
+        environment:
+            - GANACHE_CHAIN_ID=1
+
+    ethereum-goerli:
+        image: docker.pkg.github.com/golemfactory/gnt2/gnt2-docker-yagna:a93c126e8255
+        ports:
+            - "8547:8545"
+        environment:
+            - GANACHE_CHAIN_ID=5
+
+    ethereum-polygon:
+        image: docker.pkg.github.com/golemfactory/gnt2/gnt2-docker-yagna:a93c126e8255
+        ports:
+            - "8548:8545"
+        environment:
+            - GANACHE_CHAIN_ID=5
+
     outbound-test:
         # A service running a TCP sink, echo and iperf3 servers
         image: outbound-test
