--- a/goth_tests/domain/payments/goth-config.yml
+++ b/goth_tests/domain/payments/goth-config.yml
@@ -22,7 +22,9 @@ docker-compose:
     # release-tag: ...
 
   compose-log-patterns:
-    ethereum: ".*Wallets supplied."
+    ethereum-mainnet: ".*Wallets supplied."
+    ethereum-goerli: ".*Wallets supplied."
+    ethereum-polygon: ".*Wallets supplied."
 
 
 key-dir: "../../assets/keys"
