--- a/goth_tests/goth-config.yml
+++ b/goth_tests/goth-config.yml
@@ -21,7 +21,9 @@ docker-compose:
     # release-tag: ...
 
   compose-log-patterns:
-    ethereum: ".*Wallets supplied."
+    ethereum-mainnet: ".*Wallets supplied."
+    ethereum-goerli: ".*Wallets supplied."
+    ethereum-polygon: ".*Wallets supplied."
 
 key-dir: "assets/keys"
 
