--- a/Cargo.toml
+++ b/Cargo.toml
@@ -220,8 +220,9 @@ members = [
 [workspace.dependencies]
 rand = "0.8.5"
 url = "2.3.1"
-trust-dns-resolver = "0.22"
+trust-dns-resolver = { version = "0.22", default-features = false }
 libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
+ethsign = "0.9.0"
 
 [patch.crates-io]
 ## SERVICES
