--- a/core/identity/Cargo.toml
+++ b/core/identity/Cargo.toml
@@ -19,7 +19,7 @@ chrono = { version = "0.4", features = ["serde"] }
 ctrlc = "3.2"
 diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
 diesel_migrations = "1.4"
-ethsign = "0.8"
+ethsign = { workspace = true }
 futures = "0.3"
 log = "0.4"
 promptly = "0.3.0"
