--- a/core/payment-driver/base/Cargo.toml
+++ b/core/payment-driver/base/Cargo.toml
@@ -16,7 +16,7 @@ chrono = { version = "0.4", features = ["serde"] }
 diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
 diesel_migrations = "1.4"
 ethereum-types = "0.11"
-ethsign = "0.8"
+ethsign = { workspace = true }
 futures = "0.3"
 hex = "0.4"
 log = "0.4"
