--- a/exe-unit/Cargo.toml
+++ b/exe-unit/Cargo.toml
@@ -59,10 +59,10 @@ ipnet = "2.3"
 lazy_static = "1.4.0"
 log = "0.4"
 openssl = { version = "0.10", optional = true }
-rand = "0.6"
+rand = { workspace = true }
 regex = "1.5"
 reqwest = { version = "0.11", optional = true }
-secp256k1 = { version = "0.19", optional = true }
+secp256k1 = { version = "0.27", optional = true }
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8"
