--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -30,7 +30,7 @@ jobs:
 
   integration-test-groups:
     name: Integration Tests (hybrid-net) group
-    runs-on: [goth]
+    runs-on: [goth, ubuntu-20.04]
     needs: test_check
     strategy:
       matrix:
@@ -48,17 +48,16 @@ jobs:
       - name: Configure Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.10.0"
+          python-version: "3.8.0"
 
       - name: Configure Poetry
         uses: Gr1N/setup-poetry@v8
         with:
-          poetry-version: 1.2.2
-          working-directory: "./goth_tests"
+          path: ~/.cache/pypoetry/virtualenvs
+          key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
 
       - name: Install dependencies
         run: |
-          poetry config experimental.new-installer false
           poetry install --no-root
 
       - name: Disconnect Docker containers from default network
