--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -26,9 +26,9 @@ pytest = "^6.2"
 pytest-asyncio = "^0.20.2"
 pytest-rerunfailures = "^10.3"
 pytest-split = "^0.8.1"
-# goth = "0.15.2"
+goth = "0.15.3"
 # to use development goth version uncomment below
-goth = { git = "https://github.com/golemfactory/goth.git", rev = "a6edf960452bf1d80dc55f2cec1da3cbfbfd78b9" }
+# goth = { git = "https://github.com/golemfactory/goth.git", rev = "a6edf960452bf1d80dc55f2cec1da3cbfbfd78b9" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
