--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -53,6 +53,9 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: Install gcc
+        run: sudo apt-get install -y gcc g++ make
+
       - name: Configure Poetry
         uses: Gr1N/setup-poetry@v8
         with:
