--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -119,7 +119,7 @@ jobs:
         # Python version below should agree with the version set up by this job.
         # In the future we'll be able to use the `--all` flag here to remove envs for
         # all Python versions (https://github.com/python-poetry/poetry/issues/3208).
-        run: poetry env remove python3.8
+        run: poetry env remove --all
 
   integration-test:
     name: Integration Tests (hybrid-net)
