--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -29,9 +29,9 @@ pytest = "^6.2"
 pytest-asyncio = "^0.20.2"
 pytest-rerunfailures = "^10.3"
 pytest-split = "^0.8.1"
-goth = "0.15.1"
+# goth = "^0.15.1"
 # to use development goth version uncomment below
-# goth =  { git = "https://github.com/golemfactory/goth.git", rev = "f399163b9f3882cca4ca4152c06aed57b916ca67" }
+goth =  { git = "https://github.com/golemfactory/goth.git", rev = "625f86c378084c6336bf385f3bd8df92a06c7714" }
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
