Update Goth dependencies (#2771)
Update Goth dependencies and version

--- a/goth_tests/pyproject.toml
+++ b/goth_tests/pyproject.toml
@@ -24,22 +24,22 @@ readme = "README.md"
 # secondary = true
 
 [tool.poetry.dependencies]
-python = "^3.8.0"
-pytest = "^6.2"
-pytest-asyncio = "^0.20.2"
+python = "^3.10.1"
+pytest = "^7.4"
+pytest-asyncio = "0.21"
 pytest-rerunfailures = "^10.3"
 pytest-split = "^0.8.1"
-goth = "0.15.3"
+# goth = "0.15.3"
 # to use development goth version uncomment below
-# goth =  { git = "https://github.com/golemfactory/goth.git", rev = "f399163b9f3882cca4ca4152c06aed57b916ca67" }
+goth =  { git = "https://github.com/golemfactory/goth.git", rev = "1aa00bf9706de9464af5b06cd44416b54455f0ae" }
 
 [tool.poetry.dev-dependencies]
-black = "^20.8b1"
-mypy = "^0.782"
-poethepoet = "^0.10.0"
+black = "21.7b0"
+mypy = "^1.5"
+poethepoet = "^0.22"
 
 [tool.poe.tasks]
 codestyle = "black --check --diff ."
-goth-tests = "pytest -svx . --reruns 3 --only-rerun AssertionError --only-rerun TimeoutError --only-rerun ApiException --only-rerun goth.runner.exceptions.TemporalAssertionError --only-rerun urllib.error.URLError --only-rerun goth.runner.exceptions.CommandError"
+goth-tests = "pytest -W ignore::DeprecationWarning -svx . --reruns 3 --only-rerun AssertionError --only-rerun TimeoutError --only-rerun ApiException --only-rerun goth.runner.exceptions.TemporalAssertionError --only-rerun urllib.error.URLError --only-rerun goth.runner.exceptions.CommandError"
 provider-tests = "pytest -svx ./domain/ya-provider"
 typecheck = "mypy ."
