--- a/utils/networking/Cargo.toml
+++ b/utils/networking/Cargo.toml
@@ -15,7 +15,8 @@ lazy_static = "1.4"
 log = "0.4"
 regex = "1"
 
-ya-relay-stack = { version = "0.5.0", optional = true }
+ya-relay-stack = { git = "https://github.com/golemfactory/ya-relay.git", rev = "03b53a7a4440c18ca1c07e4fb99a6a2dcc1c2d88", optional = true }
+#ya-relay-stack = { version = "0.5.0", optional = true }
 
 anyhow = { version = "1.0", optional = true }
 trust-dns-resolver = { workspace=true, optional = true }
