--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -22,7 +22,7 @@ jobs:
         id: wait-for-build-ubu
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          checkName: "Build binaries (x86-64) (ubuntu-latest)"
+          checkName: "Build binaries (x86-64) (yagna-builder, ubuntu-22.04)"
           ref: ${{ github.event.pull_request.head.sha || github.sha }}
           intervalSeconds: 30
           timeoutSeconds: 3600
