--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -33,11 +33,19 @@ jobs:
           toolchain: ${{ env.rust_stable }}
           components: rustfmt, clippy
 
+      - name: Extract branch name
+        id: extract_branch
+        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+
       - name: Check lockfile
         uses: actions-rs/cargo@v1
         with:
           command: tree
           args: --locked
+
+      - name: Set build target for cache
+        id: setup_cache_target
+        run: echo "build_target=${CARGO_BUILD_TARGET:-x86_64-unknown-linux-musl}" >> $GITHUB_OUTPUT
 
       - name: Install openssl ( Windows only )
         if: runner.os == 'Windows'
@@ -46,8 +54,20 @@ jobs:
           vcpkg list
           vcpkg integrate install
 
+      - name: Load local cache
+        continue-on-error: true
+        run:
+          # Uncomment line if you want need to clear cache
+          #rm -rf "/opt/yagna_cache/${{ steps.extract_branch.outputs.branch }}/${{ steps.setup_cache_target.outputs.build_target }}/target"
+          cp -rp "/opt/yagna_cache/unit_tests/${{ steps.extract_branch.outputs.branch }}/${{ steps.setup_cache_target.outputs.build_target }}/target" target
+
       - name: Unit tests
         uses: actions-rs/cargo@v1
         with:
           command: test
           args: --workspace --exclude=["./agent/provider/src/market"] --locked
+
+      - name: Save local cache
+        run: |
+          # copy to /opt/yagna_cache and preserve permissions and timestamps
+          rsync -a --delete --mkpath target/ "/opt/yagna_cache/unit_tests/${{ steps.extract_branch.outputs.branch }}/${{ steps.setup_cache_target.outputs.build_target }}/target"
