--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -4,13 +4,13 @@ on:
   push:
     branches:
       - master
-      - payments-dev
-      - release/*
-  pull_request:
-    branches:
-      - master
-      - payments-dev
-      - release/*
+
+  workflow_dispatch:
+    inputs:
+      warning:
+        description: 'Choosing the branch is not supported yet.'
+        required: true
+        default: 'Predefined branches will be used'
 
 env:
   rust_stable: 1.71.1
@@ -22,7 +22,11 @@ jobs:
       # `-D warnings` means any warnings emitted will cause build to fail
       RUSTFLAGS: "-C opt-level=z -C target-cpu=x86-64 -C debuginfo=1"
       X86_64_PC_WINDOWS_MSVC_OPENSSL_DIR: c:/vcpkg/installed/x64-windows
-    runs-on: [yagna-builder, ubuntu-22.04]
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest, windows-latest, ubuntu-latest]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -33,19 +37,16 @@ jobs:
           toolchain: ${{ env.rust_stable }}
           components: rustfmt, clippy
 
-      - name: Extract branch name
-        id: extract_branch
-        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+      - name: Setup cache
+        uses: Swatinem/rust-cache@v2
+        with:
+          save-if: ${{ github.ref == 'refs/heads/master' }}
 
       - name: Check lockfile
         uses: actions-rs/cargo@v1
         with:
           command: tree
           args: --locked
-
-      - name: Set build target for cache
-        id: setup_cache_target
-        run: echo "build_target=${CARGO_BUILD_TARGET:-x86_64-unknown-linux-musl}" >> $GITHUB_OUTPUT
 
       - name: Install openssl ( Windows only )
         if: runner.os == 'Windows'
@@ -54,20 +55,8 @@ jobs:
           vcpkg list
           vcpkg integrate install
 
-      - name: Load local cache
-        continue-on-error: true
-        run:
-          # Uncomment line if you want need to clear cache
-          #rm -rf "/opt/yagna_cache/${{ steps.extract_branch.outputs.branch }}/${{ steps.setup_cache_target.outputs.build_target }}/target"
-          cp -rp "/opt/yagna_cache/unit_tests/${{ steps.extract_branch.outputs.branch }}/${{ steps.setup_cache_target.outputs.build_target }}/target" target
-
       - name: Unit tests
         uses: actions-rs/cargo@v1
         with:
           command: test
           args: --workspace --exclude=["./agent/provider/src/market"] --locked
-
-      - name: Save local cache
-        run: |
-          # copy to /opt/yagna_cache and preserve permissions and timestamps
-          rsync -a --delete --mkpath target/ "/opt/yagna_cache/unit_tests/${{ steps.extract_branch.outputs.branch }}/${{ steps.setup_cache_target.outputs.build_target }}/target"
